Fix FE: fix style scrollbar  form add new menu and form edit menu

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -2849,7 +2849,7 @@ body.tab-done .add-order-btn {
 }
 
 .add-menu-modal .flavor-checkboxes {
-    max-height: 140px;
+    max-height: 120px;
 }
 
 .add-menu-modal .modal-title {
@@ -3148,7 +3148,7 @@ body.tab-done .add-order-btn {
     border-radius: 10px;
     padding: 16px;
     max-height: 240px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
     scrollbar-width: thin;
@@ -3577,7 +3577,7 @@ body.tab-done .add-order-btn {
     font-weight: 600;
     font-size: 14px;
     cursor: pointer;
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
 }
 
 .apply-filter-btn {
@@ -3586,10 +3586,8 @@ body.tab-done .add-order-btn {
 }
 
 .apply-filter-btn:hover {
-    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
-    transition: opacity 0.3s ease;
-    background: #207156;
-    transform: scale(1.02);
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(32, 113, 86, 0.3);
 }
 
 .clear-filter-btn {
@@ -3600,8 +3598,8 @@ body.tab-done .add-order-btn {
 
 .clear-filter-btn:hover {
     background: #E8E4D8;
-    transition: opacity 0.3s ease;
-    transform: scale(1.02);}
+    transform: translateY(-2px);
+}
 
 /* Table Info Styles */
 .table-info {
@@ -3996,26 +3994,23 @@ body.tab-done .add-order-btn {
 
 .view-modal .modal-btn-cancel {
     background-color: #E0E0E0;
-    /* color: #312929; */
+    color: #312929;
 }
 
 .view-modal .modal-btn-cancel:hover {
     background-color: #D0D0D0;
-    transform: scale(1.02);
-    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
+    transform: translateY(-2px);
 }
 
 .view-modal .modal-btn:not(.modal-btn-cancel) {
     background: linear-gradient(90deg, #207156 0%, #60B7A6 100%);
     color: #FFFFFF;
-    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
+    box-shadow: 4px 6px 6px 0px rgba(0, 0, 0, 0.25);
 }
 
 .view-modal .modal-btn:not(.modal-btn-cancel):hover {
-    background: #207156;
-    transition: opacity 0.3s ease;
-    transform: scale(1.02);
-    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
+    transform: translateY(-2px);
+    box-shadow: 6px 8px 8px 0px rgba(0, 0, 0, 0.3);
 }
 
 .view-modal .modal-close {
